--- a/app/src/main/res/layout/fragment_room.xml
+++ b/app/src/main/res/layout/fragment_room.xml
@@ -9,11 +9,13 @@
 
     <FrameLayout
         android:id="@+id/frameLayout"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:textColor="@color/black"
             android:id="@+id/text_main_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,19 +27,22 @@
             android:textSize="18sp" />
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:id="@+id/button_back"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center|start"
             android:layout_marginStart="16dp"
-            android:padding="8dp"
+            android:padding="16dp"
             android:src="@drawable/button_back" />
 
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="8dp"
         android:id="@+id/recycler_rooms"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        tools:listitem="@layout/room_item_layout"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
