--- a/app/src/main/res/layout/tourist_item_layout.xml
+++ b/app/src/main/res/layout/tourist_item_layout.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tourist_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="13dp"
-    android:background="@drawable/main_card_all_corners_bg">
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/main_card_all_corners_bg"
+    android:paddingBottom="13dp">
 
     <TextView
         android:id="@+id/text_touristNumber"
@@ -21,6 +23,7 @@
         tools:text="Первый турист" />
 
     <ImageView
+        android:id="@+id/button_open"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="16dp"
@@ -32,12 +35,13 @@
 
     <LinearLayout
         android:id="@+id/tourist_info"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/text_touristNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        tools:visibility="visible"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/text_touristNumber">
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -74,7 +78,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/input_seconName"
+                android:id="@+id/input_secondName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -164,8 +168,6 @@
                 android:inputType="date" />
 
         </com.google.android.material.textfield.TextInputLayout>
-
-
 
 
     </LinearLayout>
