small fixes and create fragmentComplete

--- a/app/src/main/res/layout/fragment_hotels.xml
+++ b/app/src/main/res/layout/fragment_hotels.xml
@@ -404,6 +404,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/button_card"
         android:elevation="20dp"
+        android:backgroundTint="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent" >
