--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="text_bg_grey">#12828796</color>
     <color name="text_bg_blue">#1A0D72FF</color>
 
+    <color name="text_bg_error">#26EB5757</color>
+    <color name="text_bg_normal">#F2F2F6</color>
+
     <color name="seed">#0D72FE</color>
     <color name="md_theme_light_primary">#FFFFFF</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
